# device_control

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
conf/daemons/: conf_vampires_qwp_filter_data.csv
conf/devices/vampires/: 99-ykushxs-usb.rules  conf_vampires_beamsplitter.toml  conf_vampires_camfocus.toml  conf_vampires_diffwheel.toml  conf_vampires_fieldstop.toml  conf_vampires_filter.toml  conf_vampires_flc.toml  conf_vampires_flc_stage.toml  conf_vampires_focus.toml  conf_vampires_mask.toml  conf_vampires_mbi.toml  conf_vampires_pupil.toml  conf_vampires_qwp.toml  conf_vampires_qwp1.toml  conf_vampires_qwp2.toml  conf_vampires_tc.toml  conf_vampires_trigger.toml
conf/facility/: conf_image_rotator.toml  conf_wpu.toml
conf/first/: conf_firstpl_injection.toml  conf_firstpl_wollaston.toml
conf/glint/: conf_glint_steering1.toml  conf_glint_steering2.toml
conf/scexao/: conf_conex_agap_test.toml  conf_firstpl_pickoff.toml  conf_scexao_polarizer.toml  conf_vampires_qwp1.toml  conf_vampires_qwp2.toml  conf_vis_block.toml  conf_vis_qwp.toml
conf/vampires/: conf_vampires_beamsplitter.toml  conf_vampires_camfocus.toml  conf_vampires_diffwheel.toml  conf_vampires_fieldstop.toml  conf_vampires_filter.toml  conf_vampires_flc.toml  conf_vampires_focus.toml  conf_vampires_mask.toml  conf_vampires_mbi.toml  conf_vampires_pupil.toml  conf_vampires_qwp2.toml  conf_vampires_trigger.toml
conf/viswfs/: conf_viswfs_camfocus.toml  conf_viswfs_flipmount1.toml  conf_viswfs_flipmount2.toml  conf_viswfs_hwp.toml  conf_viswfs_pickoffBS.toml  conf_viswfs_rs1.toml  conf_viswfs_rs2.toml  conf_viswfs_trombone1.toml  conf_viswfs_trombone2.toml
src/arduino/: README.md  nir_flc_trigger.ino  vampires_trigger.ino
src/arduino/vampires_trigger/: vampires_trigger.ino
src/device_control/: __init__.py  base.py  interfaces.py  logging_config.py  multi_device.py  pyro_keys.py  test_conex.py
src/device_control/daemons/: first_devices.py  scexao2_devices.py  vampires.py  vampires_daemon.py  vampires_devices.py  vampires_qwp_daemon.py  vampires_temp_daemon.py  viswfs_devices.py
src/device_control/drivers/: __init__.py  arduino.py  conex.py  zaber.py
src/device_control/drivers/thorlabs/: __init__.py  elliptec.py  filterwheel.py  flipmount.py  tempcontroller.py
src/device_control/facility/: __init__.py  image_rotator.py  wpu.py
src/device_control/first/: __init__.py  firstpl_injection.py  firstpl_wollaston.py
src/device_control/glint/: steering.py
src/device_control/scexao/: __init__.py  agap_test.py  firstpl_pickoff.py  polarizer.py  vampires_qwp.py  vis_block.py  vis_qwp.py
src/device_control/scripts/: check_status.py
src/device_control/vampires/: __init__.py  cameras.py  vampires_beamsplitter.py  vampires_camfocus.py  vampires_diffwheel.py  vampires_fieldstop.py  vampires_filter.py  vampires_flc.py  vampires_focus.py  vampires_mask.py  vampires_mask_wheel.py  vampires_mbi.py  vampires_pupil.py  vampires_qwp.py  vampires_tc.py  vampires_trigger.py
src/device_control/vampires/cli/: vampires_beamsplitter.py  vampires_camfocus.py  vampires_diffwheel.py  vampires_fieldstop.py  vampires_filter.py  vampires_focus.py  vampires_mask.py  vampires_mbi.py  vampires_pupil.py  vampires_qwp.py  vampires_tc.py
src/device_control/viswfs/: __init__.py  viswfs_camfocus.py  viswfs_flipmount1.py  viswfs_flipmount2.py  viswfs_hwp.py  viswfs_pickoffBS.py  viswfs_rs1.py  viswfs_rs2.py  viswfs_trombone1.py  viswfs_trombone2.py
test/: agap_test.py  test_conex.py
