[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "device_control"
description = "SCExAO device control"
readme = "README.md"
authors = [
    {name = "Miles Lucas", email = "mdlucas@hawaii.edu"},
    {name = "Vincent Deo", email = "vdeo@naoj.org"}
]
dependencies = [
    "click",
    "docopt",
    "pyserial",
    "tomli",
    "tomli-w",
    "zaber-motion",
    "tqdm",
    "swmain",
    "scxconf",
    "paramiko",
    "pyusb"
]
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "pytest",
]

[project.scripts]
# daemons
scexao2_daemon = "device_control.daemons.scexao2_devices:main"
vampires_daemon = "device_control.daemons.vampires_devices:main"
# facility devices
imr = "device_control.facility.image_rotator:main"
wpu = "device_control.facility.wpu:main"
# VAMPIRES devices
vampires_bs = "device_control.vampires.vampires_beamsplitter:main"
vampires_camfocus = "device_control.vampires.vampires_camfocus:main"
vampires_diffwheel = "device_control.vampires.vampires_diffwheel:main"
vampires_fieldstop = "device_control.vampires.vampires_fieldstop:main"
vampires_filter = "device_control.vampires.vampires_filter:main"
vampires_flc = "device_control.vampires.vampires_flc:main"
vampires_focus = "device_control.vampires.vampires_focus:main"
vampires_mask = "device_control.vampires.vampires_mask:main"
vampires_mbi = "device_control.vampires.vampires_mbi:main"
vampires_pupil = "device_control.vampires.vampires_pupil:main"
vampires_qwp = "device_control.vampires.vampires_qwp:main"
vampires_tc = "device_control.vampires.vampires_tc:main"
vampires_trigger = "device_control.vampires.vampires_trigger:main"

[tool.setuptools.dynamic]
version = {attr = "device_control.__version__"}

[tool.coverage.run]
source = ["device_control"]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
multi_line_output = 3
